@@ -96,6 +96,34 @@ public class TestTheUniverse {
 }
 ----
 
+== Extra Messaging
+
+You can add extra messaging to your matcher assertion in the case you want to be more descriptive. The message will be
+prepended to the description.
+
+[source, java]
+----
+public class ExtraMessaging {
+
+    public Test messagingTest = test("Validation Test", () -> {
+            var validator = new MyValidator();
+            var toValidate = 1;
+            return that(
+                    "Because we are validating a number below 10",
+                    () -> validator.validate(toValidate),
+                    willThrowExceptionThat(hasType(IllegalArgumentException.class)));
+        });
+
+    /* Description of test is:
+     *
+     * Because we are validating a number below 10: Expected {runnable} to
+     * throw an exception that was expected to be an instance of {java.lang.IllegalArgumentException}
+     */
+
+}
+----
+
+
 '''
 
 You can include this module with this dependency:
